[tool.poetry]
name = "capital-city-guesser"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "capital_city_guesser"}]

[tool.poetry.dependencies]
python = "^3.10"
Unidecode = "^1.3.6"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
